fixed spacing issues for headers and lists

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   margin: 0rem;
   background-color: var(--white);
   position: relative;
+  padding-bottom: 4rem;
   /* overflow-x: hidden; */
 }
 
@@ -48,39 +49,43 @@ h1, h2, h3, h4, h5 {
 h5 {
   font-size: 1.25rem;
   font-weight: 100;
+  margin-bottom: 1rem;
 }
 
 h4 {
   font-size: 1.5rem;
-  font-weight: 500;
+  font-weight: 700;
+  margin-bottom: 1rem;
 }
 
 h3 {
   font-size: 2rem;
   font-weight: 300;
+  margin-bottom: 1rem;
 }
 
 h2 {
   font-size: 3rem;
   font-weight: 700;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
 }
 
 h1 {
   font-size: 4rem;
   font-weight: 900;
-  margin-bottom: 1rem;
 }
 
 p, a {
   font-size: 1.15rem;
   line-height: 200%;
   margin-top: 0rem;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 li {
   font-size: 1.15rem;
-  line-height: 150%;
+  line-height: 200%;
 }
 
 .nav-bar, footer {
@@ -531,7 +536,7 @@ button {
 .content {
   max-width: 56rem;
   margin: auto;
-  padding: 0rem 2rem 2rem 2rem;
+  padding: 0rem 2rem;
   position: relative;
 }
 
